--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Hoài An Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Hoài An Portfolio<br />
 						</h1>
-						<p>My Data Analyst skills in Finance and Machine Learning field 
+						<p>My Data Analyst skills in the Finance and Machine Learning field 
 						with SQL, R and other languages <a href="https://www.linkedin.com/in/an-nguy%E1%BB%85n-371a54267/">@AnTheAnalyst</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
